# reinforce-accelerator

./: .gitignore  CMakeLists.txt  PLAN.md  example.pptx
include/: axi_fifo_dummy.h  helpers.h  node.h  treeval_accelerator.h
src/: bet.json  helpers.cpp  main.cpp  node.cpp  tree.json  treeval_accelerator.cpp
treeval/: README.md  axi_fifo_dummy.sv  axi_fifo_dummy_tb.sv  treeval.sv  treeval.v  treeval_controller.sv  treeval_controller_tb.sv  treeval_tb.sv  treeval_tb.v
